--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
- <link rel="stylesheet" href="./dist/bundle.css">
- <link rel="manifest" href="./manifest.json">
- <link rel="stylesheet" href="./css/normalize.css">
+ <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+ <link rel="stylesheet" href="/dist/bundle.css">
+ <link rel="manifest" href="/manifest.json">
+ <link rel="stylesheet" href="/css/normalize.css">
 
  <style id="theme-styles"></style>
  <title>Lands & Dungeons</title>
@@ -15,7 +15,7 @@
 <body>
 <div id="application"></div>
 
-<script src="./dist/bundle.js"></script>
+<script src="/dist/bundle.js"></script>
 
 </body>
 </html>
